# musicbrainz_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  berger.toml  build.rs  flake.nix
.github/: dependabot.yml
.github/workflows/: Release.yaml  clippy.yml  codeql.yaml  codeql.yml  docs.yml  minimum_versions.yml  release_plz.yaml  release_plz.yml  rust_check.yaml  semver_checks.yml  test.yml
examples/: browse.rs  fetch_artist.rs  fetch_release_coverart.rs  fetch_url.rs  includes.rs  netrc.rs  oauth.rs  search_artist.rs  set_user_agent.rs
examples/async/: browse.rs  fetch_artist.rs  fetch_release_coverart.rs  includes.rs  oauth.rs  search_artist.rs  set_user_agent.rs
examples/blocking/: fetch_release_coverart.rs  includes.rs  oauth.rs  set_user_agent.rs
src/: client.rs  config.rs  error.rs  fetching.rs  fixtures.rs  lib.rs  prelude.rs  rate_limit.rs
src/api/: api_request.rs  browse_query.rs  coverart_query.rs  endpoints.rs  fetch_query.rs  impl_browse_includes.rs  impl_relations_includes.rs  mod.rs  query.rs  search_query.rs
src/api/api_request/: fetching.rs  mod.rs
src/api/parser/: mod.rs  musicbrainz_result.rs  parsing_error.rs
src/api/ws/two/url/: mod.rs
src/client/: get.rs  mod.rs  post.rs
src/deserialization/: browse_deserializer.rs  coordinate_deserializer.rs  mod.rs  search_deserializer.rs
src/entity/: alias.rs  annotation.rs  api.rs  area.rs  artist.rs  cdstub.rs  date_string.rs  event.rs  instrument.rs  label.rs  lifespan.rs  mod.rs  place.rs  recording.rs  relations.rs  release.rs  release_group.rs  search.rs  series.rs  tag.rs  url.rs  work.rs
src/extra_endpoints/: oauth.rs
src/query/: browse.rs  mod.rs
tests/: edge_cases.rs  tests.rs
tests/async_tests/annotation/: annotation_search.rs
tests/async_tests/api/: config.rs  fetch.rs  search.rs
tests/async_tests/area/: area_browse.rs  area_includes.rs  area_search.rs
tests/async_tests/artist/: artist_browse.rs  artist_includes.rs  artist_search.rs
tests/async_tests/cdstub/: cdstub_search.rs
tests/async_tests/discid/: discid_fetch.rs
tests/async_tests/event/: event_browse.rs  event_includes.rs  event_search.rs
tests/async_tests/instrument/: instrument_browse.rs  instrument_includes.rs  instrument_search.rs
tests/async_tests/label/: label_browse.rs  label_includes.rs  label_search.rs
tests/async_tests/place/: place_browse.rs  place_includes.rs
tests/async_tests/recording/: recording_browse.rs  recording_includes.rs  recording_search.rs
tests/async_tests/release/: release_browse.rs  release_coverart.rs  release_includes.rs  release_search.rs
tests/async_tests/release_group/: mod.rs  release_group_browse.rs  release_group_coverart.rs  release_group_includes.rs  release_group_search.rs
tests/async_tests/series/: series_browse.rs  series_includes.rs  series_search.rs
tests/async_tests/work/: work_browse.rs  work_includes.rs  work_search.rs
tests/blocking_tests/api/: config.rs  fetch.rs
tests/serde/: mod.rs
tests/serde/data/browse/release/: by_label.json
tests/serde/data/lookup/area/: 45f07934-675a-46d6-a577-6f8637a411b1.json
tests/serde/data/lookup/artist/: 5b11f4ce-a62d-471e-81fc-a69a8278c7da.json  db92a151-1ac2-438b-bc43-b82e149ddd50.json
tests/serde/data/lookup/event/: fe39727a-3d21-4066-9345-3970cbd6cca4.json
tests/serde/data/lookup/genre/: f66d7266-eb3d-4ef3-b4d8-b7cd992f918b.json
tests/serde/data/lookup/instrument/: dd430e7f-36ba-49a5-825b-80a525e69190.json
tests/serde/data/lookup/label/: 46f0f4cd-8aab-4b33-b698-f459faf64190.json
tests/serde/data/lookup/place/: 478558f9-a951-4067-ad91-e83f6ba63e74.json
tests/serde/data/lookup/recording/: b9ad642e-b012-41c7-b72a-42cf4911f9ff.json
tests/serde/data/lookup/release/: 59211ea4-ffd2-4ad9-9a4e-941d3148024a.json  942b9e7b-3a43-4f22-b200-ab69ee302d16.json  987f3e2d-22a6-4a4f-b840-c80c26b8b91a.json  b1dc9838-adf3-43f2-93f9-802b46e5fe59.json  c9d52105-5c20-3216-bc1b-e54918f8f688.json
tests/serde/data/lookup/release-group/: c9fdb94c-4975-4ed6-a96f-ef6d80bb7738.json
tests/serde/data/lookup/series/: c5dd4f78-4160-458a-9edc-f87c5ebbc700.json
tests/serde/data/lookup/url/: 46d8f693-52e4-4d03-936f-7ca8459019a7.json
tests/serde/data/lookup/work/: b1df2cf3-69a9-3bc0-be44-f71e79b27a22.json  c1b0e8a2-2461-4d48-9a89-f4e6d624d342.json
tests/serde/data/search/annotation/: entity_bdb24cb5-404b-4f60-bba4-7b730325ae47.json
tests/serde/data/search/area/: Ile-de-France.json
tests/serde/data/search/artist/: artist_fred_AND_type_group_AND_country_US.json
tests/serde/data/search/cdstub/: title_Doo.json
tests/serde/data/search/event/: unique.json
tests/serde/data/search/instrument/: Nose.json
tests/serde/data/search/label/: Devils_Records.json
tests/serde/data/search/place/: chipping.json
tests/serde/data/search/recording/: isrc_GBAHT1600302.json  we_will_rock_you_AND_arid_0383dadf-2a4e-4d10-a46a-e9e041da8eb3.json
tests/serde/data/search/release/: drivers_license.json  release_Schneider_AND_Shake.json
tests/serde/data/search/release-group/: release_Tenance.json
tests/serde/data/search/series/: Studio_Brussel.json
tests/serde/data/search/tag/: shoegaze.json
tests/serde/data/search/url/: Hello.json
tests/serde/data/search/work/: work_Frozen_AND_arid_4c006444-ccbf-425e-b3e7-03a98bab5997.json
tests/test_framework/: mod.rs  null_eq.rs
