[package]
name = "musicbrainz_rs"
version = "0.12.0"
authors = ["okno <paul.delafosse@protonmail.com>", "RustyNova"]
repository = "https://github.com/RustyNova016/musicbrainz_rs"
documentation = "https://docs.rs/musicbrainz_rs"
edition = "2021"
license = "MIT"
readme = "README.md"
description = """
MusicBrainz Rust is a utility crate for the
MusicBrainz API.
"""
rust-version = "1.82.0"

[badges]
travis-ci = { repository = "RustyNova016/musicbrainz_rs", branch = "master" }

[dependencies]
# Api core
api_bindium = { version = "0.2.1", default-features = false }

# Schema deserialization
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
chrono = { version = "0.4.38", features = ["serde"] }

# Macros
snafu = { version = "0.8.9", features = ["rust_1_81"] }
bon = "3.8.1"

# Debuging
hotpath = { version = "0.9.0", optional = true }
tracing = { version = "0.1.43", optional = true }
tracing-indicatif = { version = "0.3.14", optional = true }

# Others
lucene_query_builder = "^0.4.0"
governor = { version = "0.10.0", optional = true }  
regex = { version = "1.11.1", optional = true}

[build-dependencies]
glob = "0.3.1"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serial_test = "3.1.1"
tokio-shared-rt = "0.1.0"
futures = "0.3.31"

[patch.crates-io]
api_bindium = {git = "https://github.com/RustyNova016/api_bindium"}

[features]
default = []

# Schema
legacy_serialize = []
extras = ["regex"]

# Async
sync = ["api_bindium/sync"]
async = ["api_bindium/async"]

# Fetching
native_tls = ["api_bindium/native_tls"]
rustls = ["api_bindium/rustls"]
rate_limit = ["dep:governor", "async"]

# Debugging
backtrace = ["api_bindium/backtrace"]
tracing = ["api_bindium/tracing", "dep:tracing", "dep:tracing-indicatif"]
hotpath = ["dep:hotpath", "hotpath/hotpath", "api_bindium/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc", "api_bindium/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off", "api_bindium/hotpath-off"]

[[example]]
required-features = ["sync"]
doc-scrape-examples = true
name = "fetch_artist"
path = "examples/blocking/fetch_artist.rs"

[[example]]
required-features = ["sync"]
doc-scrape-examples = true
name = "includes"
path = "examples/blocking/includes.rs"

[[example]]
required-features = ["sync"]
doc-scrape-examples = true
name = "browse"
path = "examples/blocking/browse.rs"

[[example]]
required-features = ["sync"]
doc-scrape-examples = true
name = "search"
path = "examples/blocking/search_artist.rs"

[[example]]
required-features = ["sync"]
doc-scrape-examples = true
name = "fetch_release_coverart"
path = "examples/blocking/fetch_release_coverart.rs"

[[example]]
required-features = ["sync"]
doc-scrape-examples = true
name = "set_user_agent"
path = "examples/blocking/set_user_agent.rs"

# [[example]]
# required-features = ["blocking"]
# name = "oauth"
# path = "examples/blocking/oauth.rs"

[[example]]
required-features = ["async"]
doc-scrape-examples = true
name = "fetch_artist_async"
path = "examples/async/fetch_artist.rs"

[[example]]
required-features = ["async"]
doc-scrape-examples = true
name = "includes_async"
path = "examples/async/includes.rs"

[[example]]
required-features = ["async"]
doc-scrape-examples = true
name = "browse_async"
path = "examples/async/browse.rs"

[[example]]
required-features = ["async"]
doc-scrape-examples = true
name = "search_async"
path = "examples/async/search_artist.rs"

[[example]]
required-features = ["async"]
doc-scrape-examples = true
name = "fetch_release_coverart_async"
path = "examples/async/fetch_release_coverart.rs"

[[example]]
required-features = ["async"]
doc-scrape-examples = true
name = "set_user_agent_async"
path = "examples/async/set_user_agent.rs"

# [[example]]
# required-features = ["async"]
# name = "oauth_async"
# path = "examples/async/oauth.rs"

[[test]]
name = "all"
path = "tests/tests.rs"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
