[package]
name = "musicbrainz_rs"
version = "0.12.0"
authors = ["okno <paul.delafosse@protonmail.com>", "RustyNova"]
repository = "https://github.com/RustyNova016/musicbrainz_rs"
documentation = "https://docs.rs/musicbrainz_rs"
edition = "2024"
license = "MIT"
readme = "README.md"
description = """
MusicBrainz Rust is a utility crate for the
MusicBrainz API.
"""
rust-version = "1.85.0"

[badges]
travis-ci = { repository = "RustyNova016/musicbrainz_rs", branch = "master" }

[dependencies]
# Api core
api_bindium = { version = "0.4.0" }

# Schema deserialization
serde = { version = "1.0.220", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }

# Macros
snafu = { version = "0.9.0", features = ["rust_1_81"] }
bon = "3.8.1"

# Debuging
hotpath = { version = "0.15.0", optional = true }
tracing = { version = "0.1.43", optional = true }
tracing-indicatif = { version = "0.3.14", optional = true }

# Others
lucene_query_builder = "^0.4.0"
governor = { version = "0.10.0", optional = true }  
regex = { version = "1.11.1", optional = true}

[build-dependencies]
glob = "0.3.1"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serial_test = "3.1.1"
tokio-shared-rt = "0.1.0"
futures = "0.3.31"
serde_json = "1.0.117"
macro_rules_attribute = "0.2.2"
smol-macros = "0.1.1"

[features]
default = []

# Schema
legacy_serialize = []
extras = ["regex"]

# Async
sync = ["api_bindium/sync"]
async = ["api_bindium/async"]

# Fetching
native_tls = ["api_bindium/native_tls"]
rustls = ["api_bindium/rustls"]
rate_limit = ["dep:governor", "async"]

# Debugging
backtrace = ["api_bindium/backtrace"]
tracing = ["api_bindium/tracing", "dep:tracing", "dep:tracing-indicatif"]
hotpath = ["dep:hotpath", "hotpath/hotpath", "api_bindium/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc", "api_bindium/hotpath-alloc"]

[[example]]
required-features = ["sync", "async"]
doc-scrape-examples = true
name = "fetch_artist"
path = "examples/fetch_artist.rs"

[[example]]
required-features = ["sync", "async"]
doc-scrape-examples = true
name = "includes"
path = "examples/includes.rs"

[[example]]
required-features = ["sync", "async"]
doc-scrape-examples = true
name = "browse"
path = "examples/browse.rs"

[[example]]
required-features = ["sync", "async"]
doc-scrape-examples = true
name = "search"
path = "examples/search_artist.rs"

[[example]]
required-features = ["sync", "async"]
doc-scrape-examples = true
name = "fetch_release_coverart"
path = "examples/fetch_release_coverart.rs"

[[example]]
required-features = ["sync", "async"]
doc-scrape-examples = true
name = "set_user_agent"
path = "examples/set_user_agent.rs"

[[example]]
required-features = ["sync", "async"]
doc-scrape-examples = true
name = "fetch_url"
path = "examples/fetch_url.rs"

# [[example]]
# required-features = ["blocking"]
# name = "oauth"
# path = "examples/blocking/oauth.rs"

[[test]]
name = "all"
path = "tests/tests.rs"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.clippy]
alloc_instead_of_core = "deny"
std_instead_of_core = "deny"
allow_attributes = "warn"
allow_attributes_without_reason = "deny"
cast_lossless = "deny"
cloned_instead_of_copied = "deny"
collapsible_else_if = "warn"
comparison_chain = "warn"
match_same_arms = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_string_hashes = "warn"
needless_type_cast = "warn"
non_std_lazy_statics = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
or_then_unwrap = "warn"
range_plus_one = "warn"
range_minus_one = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_else = "warn"
ref_option = "deny"
#renamed_function_params = "warn"
return_and_then = "warn"
return_self_not_must_use = "warn"
same_name_method = "deny"
search_is_some = "warn"
inefficient_to_string = "warn"
inherent_to_string = "warn"
uninlined_format_args = "warn"
similar_names = "warn"
try_err = "warn"
type_complexity = "warn"
type_repetition_in_bounds = "warn"
unnecessary_box_returns = "warn"
unnecessary_literal_bound = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unseparated_literal_suffix = "warn"
unused_async = "warn"
unused_peekable = "warn"
unused_result_ok = "warn"
unused_self = "warn"
unused_trait_names = "warn"
useless_let_if_seq = "warn"
wildcard_enum_match_arm  = "warn"